syntax = "proto3";
import "pb/pos.proto";

package transactions;
option go_package = "./pkg/pb";



message Transaction {
  int32 id = 1;
  string user_id = 2;
  int32 pos_id = 3;
  int32 total = 4;
  string details = 5;
  int32 type = 6;
  int32 created_at = 7;
  int32 updated_at = 8;
  pos.Pos pos = 9;
}

// CreateTransaction
message CreateTransactionRequest {
  int32 user_id = 1;
  int32 pos_id = 2;
  int32 total = 3;
  string details = 4;
  int32 action_type = 5;
  int32 type = 6;
  int32 date = 7;
}

message CreateTransactionResponse {
  int32 status = 1;
  string error = 2;
  int32 id = 3;
}

message GetTransactionListRequest {
  int32 limit = 1;
  int32 page = 2;
  int32 user_id = 3;
  int32 action = 4;
  int32 start_date = 5;
  int32 end_date = 6;
}

message GetTransactionListResponse {
  int32 status = 1;
  string error = 2;
  int32 limit = 3;
  int32 page = 4;
  repeated Transaction transaction = 5;
  int32 total_transaction = 6;
}

message DeleteTransactionRequest {
  int32 id = 1;
  int32 user_id = 2;
}

message DeleteTransactionResponse {
  int32 status = 1;
  string error = 2;
}

message DetailTransactionRequest {
  int32 id = 1;
  int32 user_id = 2;
}

message DetailTransactionResponse {
  int32 status = 1;
  string error = 2;
  Transaction transaction = 3;
}

message GetPercentageExpenditureRequest {
  int32 user_id = 1;
  string start_date = 2;
  string end_date = 3;
}

message GetPercentageExpenditureResponse {
  int32 status = 1;
  string error = 2;
  float today_expenses = 3;
  float other_day_expenses = 4;
  float percentage = 5;
}

service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {}
  rpc GetTransactionByUser(GetTransactionListRequest) returns (GetTransactionListResponse) {}
  rpc DeleteTransactionByUser(DeleteTransactionRequest) returns (DeleteTransactionResponse) {}
  rpc DetailTransaction(DetailTransactionRequest) returns (DetailTransactionResponse) {}
  
  rpc GetPercentageExpenditure(GetPercentageExpenditureRequest) returns (GetPercentageExpenditureResponse) {}
}